# image-inference-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: service.yaml
docs/superpowers/plans/: 2026-06-04-ascend-image-inference-service-plan.md
docs/superpowers/specs/: 2026-06-04-ascend-image-inference-service-design.md
models/mnist/: config.yaml
models/mnist/1/: model.onnx
models/mnist_pretrained/: config.yaml
models/mnist_pretrained/1/: model.onnx
models/resnet34/: config.yaml
models/resnet50/: config.yaml
scripts/: benchmark.py  download_mnist.py  export_mnist_model.py  export_mnist_onnx.py  export_resnet34.py  extract_and_rebuild.py  fix_dynamic_batch.py  get_pretrained_mnist.py  test_batch_local.py  test_mnist_e2e.py  test_pretrained.py  test_resnet34.py  test_static_batch_model.py
src/inference_server/: config.py  main.py  metrics.py  model_manager.py
src/inference_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/inference_server/api/: grpc_server.py  http_server.py  inference.proto  inference_pb2.py  inference_pb2_grpc.py  schemas.py
src/inference_server/backend/: __init__.py  base.py  onnx_backend.py  registry.py
src/inference_server/core/: postprocessor.py  preprocessor.py  request.py  scheduler.py
tests/: test_backend.py  test_config.py  test_integration.py  test_preprocessor.py  test_scheduler.py
