[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-server"
version = "0.1.0"
description = "通用图像识别推理服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "grpcio>=1.56",
    "grpcio-tools>=1.56",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.17",
    "python-multipart>=0.0.6",
    "onnxruntime>=1.16",  # 纯 CPU，轻量
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.5",
]
prod = [
    "gunicorn>=21.0",
]

[project.scripts]
inference-server = "inference_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
